; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_siena.c_siena_reset_hw.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_siena.c_siena_reset_hw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efx_nic = type { i32 }

@RESET_TYPE_WORLD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.efx_nic*, i32)* @siena_reset_hw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @siena_reset_hw(%struct.efx_nic* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.efx_nic*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.efx_nic* %0, %struct.efx_nic** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.efx_nic*, %struct.efx_nic** %4, align 8
  %8 = call i32 @efx_mcdi_handle_assertion(%struct.efx_nic* %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* %6, align 4
  store i32 %12, i32* %3, align 4
  br label %23

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @RESET_TYPE_WORLD, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %13
  %18 = load %struct.efx_nic*, %struct.efx_nic** %4, align 8
  %19 = call i32 @efx_mcdi_reset_mc(%struct.efx_nic* %18)
  store i32 %19, i32* %3, align 4
  br label %23

20:                                               ; preds = %13
  %21 = load %struct.efx_nic*, %struct.efx_nic** %4, align 8
  %22 = call i32 @efx_mcdi_reset_port(%struct.efx_nic* %21)
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %20, %17, %11
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @efx_mcdi_handle_assertion(%struct.efx_nic*) #1

declare dso_local i32 @efx_mcdi_reset_mc(%struct.efx_nic*) #1

declare dso_local i32 @efx_mcdi_reset_port(%struct.efx_nic*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
